k8s/db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pets
      service: db
  template:
    metadata:
      labels:
        app: pets
        service: db 
    spec:
      containers:
      - name: db
        image: somkiat/pets-db:v1
        ports:
        - containerPort: 5432
          name: db
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
  - port: 5432
  selector:
    app: pets
    service: db
