k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pets
      service: frontend
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: pets
        service: frontend
    spec:
      containers:
      - name: frontend
        image: somkiat/pets-front:v1
        resources:
           limits:
             memory: "512Mi"
             cpu: "250m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: pets
    service: frontend
