k8s/web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pets
      service: web
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: pets
        service: web
    spec:
      containers:
      - name: web
        image: somkiat/pets-web:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: pets
    service: web
